# detapack

./: README.md  export.json  index.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
detapack/: __init__.py  main.py  utils.py
tests/: test_detapack.py
