[tool.poetry]
name = "detapack"
version = "0.1.3"
description = ""
authors = ["Paul Haedrich <hey@foerstal.com>"]
readme = "README.md"

[tool.poetry.scripts]
detapack = "detapack.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
deta = "^1.2.0"
rich = "^13.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
